Switch to openJDK